add sample index page

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ server:
 spring:
 # PROFILES
   profiles:
-    active: dev
+    active: local
 # THYMELEAF (ThymeleafAutoConfiguration)
   thymeleaf:
     enabled: true
