--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,4 @@
-target/
-bower_components/
-node_modules/
-notworkingyet/
-deploy/
-.buildpath
-.project
-.settings
-.bin/
-.idea/
-.tmp/
-*.class
-*.iml
-*.iws
-*.ipr
-*.db
-.DS_Store
-.classpath
-bin
+/target/
+/.classpath
+/.project
+/.settings/
