--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,10 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <java.version>1.8</java.version>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
 
   <dependencies>
@@ -45,9 +48,21 @@
       <artifactId>spring-boot-devtools</artifactId>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.jmockit/jmockit -->
+    <dependency>
+    <groupId>org.jmockit</groupId>
+      <artifactId>jmockit</artifactId>
+      <version>1.27</version>
+      <scope>test</scope>
+    </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
     </dependency>
   </dependencies>
