thymeleafの独自ダイアレクトの実装

--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-devtools</artifactId>
+      <optional>true</optional>
     </dependency>
 
     <!-- https://mvnrepository.com/artifact/org.jmockit/jmockit -->
@@ -72,6 +73,9 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
+        <configuration>
+          <fork>true</fork>
+        </configuration>
       </plugin>
     </plugins>
   </build>
