--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,3 +13,38 @@ spring:
     enabled: true
     cache: false
     encoding: UTF-8
+
+# ----------------------------------------
+# DEVTOOLS PROPERTIES
+# ----------------------------------------
+
+# DEVTOOLS (DevToolsProperties)
+  devtools:
+    livereload:
+      enabled: true # Enable a livereload.com compatible server.
+      port: 35729  # Server port.
+    restart:
+      additional-exclude: "**/*.xml" # Additional patterns that should be excluded from triggering a full restart.
+      additional-paths: # Additional paths to watch for changes.
+        - src/main/resources/sql
+        - src/main/resources/xsd
+#        - C:/Users/Shin/dev/trigger-file
+      enabled: true # Enable automatic restart.
+      exclude: META-INF/maven/**, META-INF/resources/**, resources/**, static/**, public/**, templates/**, **/*Test.class, **/*Tests.class, git.properties # Patterns that should be excluded from triggering a full restart.
+      poll-interval: 1000 # Amount of time (in milliseconds) to wait between polling for classpath changes.
+      quiet-period: 400 # Amount of quiet time (in milliseconds) required without any classpath changes before a restart is triggered.
+      trigger-file: .reloadtrigger # Name of a specific file that when changed will trigger the restart check. If not specified any classpath file change will trigger the restart.
+
+# REMOTE DEVTOOLS (RemoteDevToolsProperties)
+#    remote:
+#      context-path: /.~~spring-boot!~ # Context path used to handle the remote connection.
+#      debug:
+#        enabled: true # Enable remote debug support.
+#        local-port: 8000 # Local remote debug server port.
+#      proxy:
+#        host: # The host of the proxy to use to connect to the remote application.
+#        port: # The port of the proxy to use to connect to the remote application.
+#      restart:
+#        enabled: true # Enable remote restart.
+#      secret: # A shared secret required to establish a connection (required to enable remote support).
+#      secret-header-name: X-AUTH-TOKEN # HTTP header used to transfer the shared secret.
