インターセプターの追加

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,7 @@ server:
   tomcat:
     max-threads: 5 # Maximum amount of worker threads.
     uri-encoding: UTF-8
+    basedir: D:\temp
 spring:
 # PROFILES
   profiles:
